--- a/client/style.css
+++ b/client/style.css
@@ -1,56 +1,64 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.1rem;
-}
-
 html,
 body {
-    height: 100%;
-    margin: 0 5%;
-    padding: 0;
+    height: 100vh;
+    overflow-y: hidden;
+    padding: 1rem;
+    background-color: rgb(191, 198, 212);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-html{
-    background-color: rgb(226, 226, 226);
+#new-character-field,
+#character-field {
+    border: 1px solid #888888;
+    background-color: lightgrey;
+    border-radius: 12px;
+    margin: 10px 20px;
+    padding: 10px;
+    box-shadow: 5px 5px 5px #888888;
 }
 
-body {
-    background-color: rgb(226, 226, 226);
-    /* border: 3px solid blue; */
+#new-character-field {
+    margin-bottom: 30px;
+}
+
+#character-field {
+    max-height: 520px;
+    overflow-y: scroll;
+}
+
+
+.character-card {
+    border: 1px solid gray;
+    background-color: lightgrey;
+    border-radius: 12px;
+    margin: 10px 0;
+    width: 30%;
+    background-color: antiquewhite;
+}
+
+.character-card:hover {
+    scale: 1.02;
+    background-color: rgb(241, 211, 171);
+    cursor: pointer;
 }
 
 h1 {
     text-align: center;
-    font-size: 2.2rem;
-    margin: 2rem;
+    color: aquamarine;
+    font-size: 3rem;
+    -webkit-text-fill-color: aquamarine;
+    -webkit-text-stroke-width: 1.2px;
+    -webkit-text-stroke-color: rgb(52, 50, 50);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-h2, h3 {
-    width: fit-content;
-    font-size: 1.2rem;
-    color: rgb(219, 96, 24);
-    font-weight: 550;
+h2 {
+    margin: 0 30px;
 }
 
-h3{
-    background-color: aliceblue;
+h3 {
+    margin: 10px;
 }
-
-#top,
-.character-card {
-    margin: 0 0 30px 0;
-    border-radius: 12px;
-    padding: 10px;
-    border: 2px solid rgb(139, 137, 137);
-}
-
-
-/* section {
-    background-color: lightpink;
-} */
 
 input {
     padding: 0.5rem;
@@ -58,29 +66,65 @@ input {
 }
 
 input[type=text] {
-    width: 100px;
-}
-
-input[type=submit] {
-    font-weight: 500;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 120px;
+    background-color: whitesmoke;
 }
 
 input[type=text]:focus {
     /* width: 150px; */
-    /* border: 2px solid red; */
+    border: 3px solid aquamarine;
 }
 
-#character-field{
-    height: 60vh;
-    width: 20vw;
-    overflow-y: scroll;
-    border: 2px solid red;
+input[type=submit],
+#resetButton {
+    width: 50px;
+    border-radius: 18px;
+    /* background-color: rgb(247, 166, 16); */
+    background-color: rgb(255, 208, 0);
+    cursor: pointer;
+    text-align: center;
 }
 
-.character-card {
-    margin: 5px 2px;
-    background-color: rgb(139, 126, 126);
-    color: aliceblue;
-    border:3px solid green;
+input[type=submit]:hover {
+    scale: 1.05;
+    background-color: rgb(255, 238, 0);
+}
+
+#resetButton {
+    /* float: right; */
+    height: 35px;
+    background-color: lightgrey;
+}
+
+#resetButton:hover {
+    scale: 1.05;
+    background-color: rgb(230, 229, 229);
+}
+
+p {
+    color: orangered;
+}
+
+/* styling scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(166, 148, 151);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(143, 124, 127);
 }
